# hive_project

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  convert_nb.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: api_router.py
app/api/endpoints/: admin.py  auth.py  chat.py  data.py  forecast.py  ml.py  notebook.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: db_models.py  schemas.py
app/models_store/: metadata.json
app/services/: cache.py  data_pipeline.py  forecasting.py  llm_agent.py
app/tests/: test_chat_sessions.py
docs/: api.md  architecture.md  changelog.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/guide/: findings.md  getting-started.md  production.md
hive_frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
hive_frontend/src/: App.tsx  config.ts  index.css
hive_frontend/src/components/: Dashboard.tsx  HdiLogo.tsx  Login.tsx
hive_frontend/src/components/widgets/: AdminWidget.tsx  ChatWidget.tsx  DataWidget.tsx  DocsWidget.tsx  MLWidget.tsx  NotebookWidget.tsx  UsersWidget.tsx
hive_frontend/src/contexts/: AuthContext.tsx
notebooks/: exploration.ipynb  exploration.py
scripts/: post_edit_test.sh
