[project]
name = "hive-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.138.0",
    "google-genai>=0.1.2",
    "jupyter>=1.1.1",
    "jupytext>=1.19.4",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "statsmodels>=0.14.6",
    "uvicorn[standard]>=0.49.0",
    "plotly>=5.0.0",
    "markdown>=3.0.0",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "redis>=5.0.0",
    "joblib>=1.3.0",
    "email-validator>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
asyncio_mode = "auto"
